--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     
     <section class="container">
         <p class="heading">Exchange Rate</p>
-        <input type="number" class="amount" placeholder="Enter amount">
+        <input type="number" class="amount" id="amount" placeholder="Enter amount">
 
         <div class="two-column-input">
 
-                <select name="ate" id="rate">
+                <select name="rateOne" id="rate">
                     <option value="BTC">BTC</option>
                     <option value="BTC">BTC</option>
                     <option value="BTC">BTC</option>
@@ -23,7 +23,7 @@
                     <option value="BTC">BTC</option>
                 </select>
                 <p class="to">to</p>
-                <select name="ate" id="rate">
+                <select name="rateTwo" id="rate">
                     <option value="BTC">USD</option>
                     <option value="BTC">JFD</option>
                     <option value="BTC">BGH</option>
